# NexTrade-AI

./: .gitignore  AGENTS.md  Dockerfile.analyst  Dockerfile.guardian  Dockerfile.trader  Dockerfile.web  LICENSE  README.md  SESSION_SUMMARY.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test.yml
.netlify/: netlify.toml  state.json
analyst/: __init__.py  analyst_bot.py  signal_aggregator.py  strategy_scorer.py
analyst/strategies/: __init__.py  base.py  bollinger_squeeze_strategy.py  ema_trend_strategy.py  macd_strategy.py  rsi_strategy.py  volume_breakout_strategy.py
backtest/: backtester.py
config/: .env.example  settings.yaml  strategies.yaml
db/: database.py  models.py  repository.py
db/migrations/: env.py
db/migrations/versions/: 6a9d2808dd38_initial_signals_positions_trades.py
frontend/: README.md  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: App.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  HeroIllustration.tsx  Icons.tsx  Layout.tsx  Navbar.tsx  WalletConnect.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  ToastContext.tsx  WalletContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: About.tsx  Admin.tsx  AdminAnalytics.tsx  Backtesting.tsx  Changelog.tsx  Dashboard.tsx  Docs.tsx  ForgotPassword.tsx  Landing.tsx  Login.tsx  ManualOverride.tsx  Performance.tsx  Positions.tsx  Privacy.tsx  ResetPassword.tsx  Security.tsx  (+10 more)
guardian/: crash_detector.py  guardian_bot.py
scripts/: run_analyst.py  run_guardian.py  run_trader.py  seed_admin.py
shared/: __init__.py  config_loader.py  encryption.py  logger.py  models.py  plan_limits.py  rate_limiter.py  realtime_data.py  redis_client.py  wallet.py
tests/: test_auth.py  test_db.py  test_encryption.py  test_guardian.py  test_guardian_integration.py  test_plan_limits.py  test_realtime.py  test_trader.py
trader/: __init__.py  notifier.py  paper_engine.py  position_tracker.py  risk_manager.py  trader_bot.py
trader/exchange/: base.py  binance_client.py  bybit_client.py  mexc_client.py
trader/templates/: reset_password.html  trade_notification.html  verify_email.html  welcome.html
web/: auth.py  auth_router.py  main.py  platform_router.py  rate_limiter.py  routers.py  stripe_router.py  user_router.py  wallet_router.py  withdrawal_router.py
(+5 files in other folders)
