[project]
name = "mexc-trading-bot"
version = "0.1.0"
description = "Enterprise MEXC Trading Bot — Market Analyst + Trader Bot"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4",
    "ccxt.pro>=4.4",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "structlog>=24.0",
    "pandas>=2.0",
    "pandas-ta>=0.3",
    "numpy>=1.26",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "yfinance>=0.2",
    "pycoingecko>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
