[project]
name = "mexc-trading-bot"
version = "0.1.0"
description = "Enterprise MEXC Trading Bot — Market Analyst + Trader Bot"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4",
    "pydantic>=2.0",
    "pydantic[email]>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "structlog>=24.0",
    "pandas>=2.0",
    "pandas_ta==0.4.71b0",
    "numpy>=1.26",
    "tenacity>=8.0",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
    "yfinance>=0.2",
    "pycoingecko>=3.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "pyjwt>=2.8",
    "bcrypt>=4.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
include = ["shared*", "analyst*", "trader*", "db*", "web*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["shared", "analyst", "trader", "db", "web"]
omit = ["*/migrations/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

